Basic OTA updates

--- a/setup-env.sh.tmpl
+++ b/setup-env.sh.tmpl
@@ -1,9 +1,10 @@
 #!/bin/bash
 
 # Don't forget to escape spaces!
+OTA_UPD_PASS="YOUR_OTA_UPDATE_PASSWORD";
 WIFI_SSID="YOUR_SSID_HERE";
 WIFI_PASSWORD="YOUR_NETWORK_PASSWORD";
 SONOS_API_HOST="SONOS_NODE_HTTP_API_HOSTNAME";
 SONOS_ZONE_NAME="SONOS\ ZONE\ NAME";
 
-export PLATFORMIO_BUILD_FLAGS='-DWIFISSID=\"'${WIFI_SSID}'\" -DWIFIPASS=\"'${WIFI_PASSWORD}'\" -DSONOSAPIHOST=\"'${SONOS_API_HOST}'\" -DSONOSZONENAME=\"'${SONOS_ZONE_NAME}'\"'
+export PLATFORMIO_BUILD_FLAGS='-DWIFISSID=\"'${WIFI_SSID}'\" -DWIFIPASS=\"'${WIFI_PASSWORD}'\" -DSONOSAPIHOST=\"'${SONOS_API_HOST}'\" -DSONOSZONENAME=\"'${SONOS_ZONE_NAME}'\" -DOTA_UPDATE_PASSWORD=\"${OTA_UPD_PASS}\"'
